# BREEN

./: README.md  pyproject.toml
eve/: __init__.py  constants.py  conversation.py  mm_utils.py
eve/eval/: eval_pope.py  eval_science_qa.py  m4c_evaluator.py  model_qa.py  model_vqa.py  model_vqa_attention_viz.py  model_vqa_attention_viz_clipmap.py  model_vqa_attention_viz_imagemap.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_qbench.py  model_vqa_science.py  run_eve.py
eve/model/: __init__.py  builder.py  eve_arch.py
eve/model/language_model/: breen_qwen25.py  configuration_qwen2.py  efficient_forward.py  eve_qwen25.py  modeling_breen.py  modeling_flash_attention_utils.py
eve/model/multimodal_encoder/: clip_encoder.py  vision_tokenizer.py
eve/train/: eve_trainer.py  train.py
scripts/eve/: breen_qwen2.5_7B_fitu.sh  breen_qwen2.5_7B_ptr0.sh  breen_qwen2.5_7B_ptr1.sh  lmms_eval.sh  test_all_benchmark.sh
scripts/eve/eval/: gqa.sh  mmbench_cn.sh  mmbench_en.sh  mme.sh  mmvet.sh  pope.sh  sqa.sh  textvqa.sh  visualize.sh  vizwiz.sh  vqav2.sh
